// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WorkerList renders the expected snapshot for a list with a single worker 1`] = `
Array [
  <article
    className="workers-container"
    key="workers-container"
  >
    <Localized
      id="serviceworker-list-header"
    >
      <h1
        className="app-page__title"
      />
    </Localized>
    <ul>
      <Worker
        isDebugEnabled={true}
        worker={
          Object {
            "active": true,
            "name": "worker1",
            "registrationFront": "",
            "scope": "SCOPE 123",
            "url": "http://example.com/worker.js",
            "workerTargetFront": "",
          }
        }
      />
    </ul>
  </article>,
  <Localized
    a={
      <a
        className="aboutdebugging-plug__link"
        onClick={[Function]}
      />
    }
    id="serviceworker-list-aboutdebugging"
    key="serviceworkerlist-footer"
  >
    <footer
      className="aboutdebugging-plug"
    />
  </Localized>,
]
`;

exports[`WorkerList renders the expected snapshot for a multiple workers list 1`] = `
Array [
  <article
    className="workers-container"
    key="workers-container"
  >
    <Localized
      id="serviceworker-list-header"
    >
      <h1
        className="app-page__title"
      />
    </Localized>
    <ul>
      <Worker
        isDebugEnabled={true}
        worker={
          Object {
            "active": true,
            "name": "worker1",
            "registrationFront": "",
            "scope": "SCOPE 123",
            "url": "http://example.com/worker.js",
            "workerTargetFront": "",
          }
        }
      />
      <Worker
        isDebugEnabled={true}
        worker={
          Object {
            "active": false,
            "name": "worker2",
            "registrationFront": "",
            "scope": "SCOPE 456",
            "url": "http://example.com/worker.js",
            "workerTargetFront": "",
          }
        }
      />
      <Worker
        isDebugEnabled={true}
        worker={
          Object {
            "active": true,
            "name": "worker3",
            "registrationFront": "",
            "scope": "SCOPE 789",
            "url": "http://example.com/worker.js",
            "workerTargetFront": "",
          }
        }
      />
    </ul>
  </article>,
  <Localized
    a={
      <a
        className="aboutdebugging-plug__link"
        onClick={[Function]}
      />
    }
    id="serviceworker-list-aboutdebugging"
    key="serviceworkerlist-footer"
  >
    <footer
      className="aboutdebugging-plug"
    />
  </Localized>,
]
`;
